--- a/scss/_patterns_grid.scss
+++ b/scss/_patterns_grid.scss
@@ -13,7 +13,8 @@ $shelves-column-name: $grid-col-name;
 'grid/shelves-grid';
 
 // Add vertical padding to add spacing when columns stack on small screens.
-[class*="col-"] {
+[class*="col-"],
+.row {
   margin-top: 0;
 }
 
